--- a/index.html
+++ b/index.html
@@ -1,150 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head profile="http://www.w3.org/2005/10/profile">
-<link rel="shortcut icon" type="image/png" href="favicon.png">
-<link type="text/css" rel="stylesheet" href="styles.css">
-<title>Sven's Athenaeum</title>
-<style>
-.papertext {
-	position: absolute;
-	left: 90px;
-	top: 300px;
-	font-family: humanistica;
-	font-size: 20px;
-	width: 310px;
- 	height: 450px;
- 	overflow-y: overlay;
-}
-.papertext::-webkit-scrollbar {
-	width: 15px;
-}
-.papertext::-webkit-scrollbar-track {
-	background-image: url(https://sven-alaric.github.io/images/rope3.png);
-	background-size: 15px 10px;
-	background-repeat: repeat-y;
-	background-position: center;
-        width: 15px;
-}
-.papertext::-webkit-scrollbar-button:vertical:decrement {
-	background: url(https://sven-alaric.github.io/images/buttonup.png);
-	background-size: 15px 10px;
-	background-repeat: no-repeat;
-	background-position: 0px 1px;
-}
-.papertext::-webkit-scrollbar-button:vertical:increment {
-	background: url(https://sven-alaric.github.io/images/buttondown.png);
-	background-size: 15px 10px;
-	background-repeat: no-repeat;
-	background-position: 0px 0px;
-}
-.papertext::-webkit-scrollbar-thumb {
-        background: url(https://sven-alaric.github.io/images/handle.png);
-	background-repeat: repeat-y;
-	background-size: 10px 16px;
-	background-position: center;
-}
-body {
-	background: url(https://sven-alaric.github.io/backgroundtile.png);
-	background-repeat: repeat;
-	background-size: 370px 370px;
-}
-li, .button1, .button2, .button3, .button4 {
-	outline: none;
-	border: none;
-	width: 214px;
-	height: 50px;
-	display: block;
-	margin: 10px;
-}
-.button1 {
-	background: url(https://sven-alaric.github.io/buttons/writings.png);
-	background-size: 214px 50px;
-	background-repeat: no-repeat;
-}
-.button1:active {
-	background: url(https://sven-alaric.github.io/buttons/writingsa.png);
-	background-size: 214px 50px;
-	background-repeat: no-repeat;
-}
-.button2 {
-	background: url(https://sven-alaric.github.io/buttons/acting.png);
-	background-size: 214px 50px;
-	background-repeat: no-repeat;
-}
-.button2:active {
-	background: url(https://sven-alaric.github.io/buttons/actinga.png);
-	background-size: 214px 50px;
-	background-repeat: no-repeat;
-}
-.button3 {
-	background: url(https://sven-alaric.github.io/buttons/media.png);
-	background-size: 214px 50px;
-	background-repeat: no-repeat;
-}
-.button3:active {
-	background: url(https://sven-alaric.github.io/buttons/mediaa.png);
-	background-size: 214px 50px;
-	background-repeat: no-repeat;
-}
-.button4 {
-	background: url(https://sven-alaric.github.io/buttons/projects.png);
-	background-size: 214px 50px;
-	background-repeat: no-repeat;
-}
-.button4:active {
-	background: url(https://sven-alaric.github.io/buttons/projectsa.png);
-	background-size: 214px 50px;
-	background-repeat: no-repeat;
-}
-@font-face {
-	font-family: remedius;
-	src: url(https://sven-alaric.github.io/fonts/0800_remedius.otf);
-}
-@font-face {
-	font-family: humanistica;
-	src: url(https://sven-alaric.github.io/fonts/2000_humanistica.otf);
-}
-div {
-	font-family: remedius;
-	color: #ffffff;
-	font-size: 30px;
-}
-p.remedius {
-	font-family: remedius;
-	color: #ffffff;
-	font-size: 30px;
-}
-.paper{
-	position: absolute;
-	left: 40px;
-	top: 270px;
-	z-index: -1;
-}
-</style>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>The HTML5 Herald</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
 </head>
+
 <body>
-	<div id="banner">
-		<center>
-			<img src="https://sven-alaric.github.io/banner.png" alt="banner" width="1000" height="153" align="middle"/>
-		</center>
-	</div>
-	<div class="paper" id="paper">
-		<img src="https://sven-alaric.github.io/images/paper.png" alt="paper" width="400" height="521" align="left"/>
-	</div>
-            <div class="papertext" id="papertext">
-		<p>News Updates:</p>
-		<p>Website still under construction, but is working. Being worked on as we speak. Needs quite a bit of editing
-		but it isnt too far from being usable. Mostly being tested, with lame writing and more. Hence all of this.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-	<div align="center">WEBSITE UNDER CONSTRUCTION</div>
-	<div class="li" role="li" id="buttons" align="center">
-		<li><input class="button1" type="button" value="" onclick="window.location.href='../writings.html'" /></li>
-		<li><input class="button2" type="button" value="" onclick="window.location.href='../acting.html'" /></li>
-		<li><input class="button3" type="button" value="" onclick="window.location.href='../photography.html'" /></li>
-		<li><input class="button4" type="button" value="" onclick="window.location.href='../projects.html'" /></li>
-		<li><a href="../about.html">About Sven</a></li>
-		<li>subsections: games, blacksmithing, carpentry, snakes/biology, gardening, hiking, running, kyaking, pipes, </li>
-	</div>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
